Clean Swagger
