# src/swagger_output.json
@@ -3,12 +3,30 @@
   "info": {
     "version": "v1.0.0",
     "title": "Mjölk API",
-    "description": "API for Mjölk"
+    "description": "API for Mjölk",
+    "contact": {
+      "name": "Dev Support Team",
+      "email": "ericphlpp@proton.me"
+    },
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    }
   },
   "servers": [
     {
-      "url": "http://localhost:3000/api",
-      "description": ""
+      "url": "http://localhost:3000/api/v1",
+      "description": "Development server"
+    },
+    {
+      "url": "https://mjolk/api/v1",
+      "description": "Production server"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Users",
+      "description": "Operations about Backoffice users"
     }
   ],
   "paths": {
@@ -22,38 +40,12 @@
         }
       }
     },
-    "/health": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/version": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/v1/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/v1/users/login": {
+    "/users/login": {
       "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Login with username and password",
         "description": "",
         "responses": {
           "200": {
@@ -88,8 +80,12 @@
         }
       }
     },
-    "/v1/users/register": {
+    "/users/register": {
       "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Register a new user",
         "description": "",
         "responses": {
           "200": {
@@ -127,12 +123,34 @@
         }
       }
     },
-    "/v1/users/whoami": {
+    "/users/whoami": {
       "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get user information from token",
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
@@ -142,7 +160,9 @@
     "securitySchemes": {
       "bearerAuth": {
         "type": "http",
-        "scheme": "bearer"
+        "scheme": "bearer",
+        "bearerFormat": "JWT",
+        "description": "Enter your bearer token in the format **Bearer &lt;token&gt;**"
       }
     }
   },
